# tiny-zombie-q-policies

./: .gitignore  Cargo.toml  LICENSE  PUBLISH.md  README.md
checkpoints/: player_policy_best.json  zombie_policy_best.json
paper-results/: action_compare_dt010.csv  capacity_sweep_attention_latex_latest.csv  capacity_sweep_dt010_1k_10k.csv  capacity_sweep_dt010_clean.csv  capacity_sweep_mlp_latex_latest.csv  capacity_sweep_summary_table_latest.tex  default_action_distribution_latex_latest.csv  default_comparison_latex_latest.csv  eval_summary_table_latest.tex  seed_repeat_summary_table_latest.tex  selfplay_learning_curve_attention_latest.csv  selfplay_learning_curve_mlp_latest.csv
src/: lib.rs
