[package]
name = "syncopate-machine"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Tiny grouped-attention Q policies for tactical zombie game AI."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "train_entity_decoder_selfplay"
path = "src/bin/train_entity_decoder_selfplay.rs"
